# poly-trading

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  deny.toml  rust-toolchain.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: verify.yml
config/: README.md  paper-market-policy.example.json  terminal-runtime.example.json
crates/accounting-ledger/: Cargo.toml
crates/authenticated-no-submit/: Cargo.toml
crates/authenticated-no-submit/src/: durable.rs  lib.rs  report.rs  tests.rs
crates/canary-rollout-simulator/: Cargo.toml
crates/chain-observer/: Cargo.toml
crates/chain-observer/src/: durable.rs  lib.rs  report.rs  tests.rs
crates/common-types/: Cargo.toml
crates/complete-set-arbitrage/: Cargo.toml
crates/complete-set-arbitrage/src/: durable.rs  lib.rs  tests.rs
crates/continuous-shadow-certification/: Cargo.toml
crates/controlled-production-release/: Cargo.toml
crates/credential-broker-simulator/: Cargo.toml
crates/credential-broker-simulator/src/: durable.rs  lib.rs  report.rs  tests.rs
crates/credential-provider-certification/: Cargo.toml
crates/credential-provider-certification/src/: durable.rs  lib.rs  report.rs  tests.rs
crates/ctf-transaction-runtime/: Cargo.toml
crates/ctf-transaction-runtime/src/: durable.rs  lib.rs  tests.rs
crates/deployment-adapter-certification/: Cargo.toml
crates/deployment-adapter-certification/src/: durable.rs  lib.rs  report.rs  tests.rs
crates/deployment-change-campaign/: Cargo.toml
crates/deployment-change-campaign/src/: durable.rs  evidence.rs  lib.rs  tests.rs
crates/deployment-change-control/: Cargo.toml
crates/deployment-change-control/src/: durable.rs  lib.rs  report.rs  tests.rs
crates/deployment-execution-intent/: Cargo.toml
crates/deployment-execution-intent/src/: durable.rs  lib.rs  report.rs  tests.rs
crates/deployment-orchestration-simulator/: Cargo.toml
crates/deployment-orchestration-simulator/src/: durable.rs  lib.rs  report.rs  tests.rs
crates/deployment-preflight/: Cargo.toml
crates/deployment-preflight/src/: durable.rs  lib.rs  report.rs  tests.rs
crates/durable-infrastructure/: Cargo.toml
crates/durable-infrastructure/src/: durable.rs  lib.rs  report.rs  tests.rs
crates/event-schema/: Cargo.toml
crates/executor-session-simulator/: Cargo.toml
crates/executor-session-simulator/src/: dossier.rs  durable.rs  lib.rs  tests.rs
crates/feed-supervisor/: Cargo.toml
crates/feed-supervisor/src/: lib.rs
crates/fleet-rollout-governance/: Cargo.toml
crates/integration-daemon/: Cargo.toml
crates/integration-daemon/src/: lib.rs  main.rs
crates/live-data-paper-certification/: Cargo.toml
crates/live-market-state/: Cargo.toml
crates/live-market-state/src/: lib.rs  main.rs
crates/market-recorder/: Cargo.toml
crates/market-session/: Cargo.toml
crates/market-session/src/: lib.rs
crates/micro-capital-canary-controller/: Cargo.toml
crates/micro-capital-canary-controller/src/: durable.rs  lib.rs  report.rs  tests.rs
crates/model-governance/: Cargo.toml
crates/model-governance/src/: lib.rs  tests.rs
crates/order-book-replay/: Cargo.toml
crates/order-book-replay/src/: lib.rs  main.rs
crates/order-intent-policy/: Cargo.toml
crates/order-intent-policy/src/: durable.rs  lib.rs  tests.rs
crates/paired-capital-staging/: Cargo.toml
crates/paired-capital-staging/src/: durable.rs  lib.rs  tests.rs
crates/paired-opportunity-runtime/: Cargo.toml
crates/paired-opportunity-runtime/src/: durable.rs  lib.rs  tests.rs
crates/paired-paper-execution/: Cargo.toml
crates/paired-paper-execution/src/: durable.rs  lib.rs  tests.rs
crates/paired-placement-policy/: Cargo.toml
crates/paired-settlement-runtime/: Cargo.toml
crates/paper-campaign-schema/: Cargo.toml
crates/paper-campaign-schema/src/: lib.rs
crates/paper-execution/: Cargo.toml
crates/paper-learning-dataset/: Cargo.toml
crates/paper-learning-dataset/src/: lib.rs  tests.rs
crates/paper-trading-runtime/: Cargo.toml
crates/paper-trading-runtime/src/: durable.rs  lib.rs  tests.rs
crates/portfolio-risk/: Cargo.toml
crates/portfolio-risk/src/: durable.rs  lib.rs  tests.rs
deploy/: .env.example  Dockerfile.api  Dockerfile.dashboard  README.md  SELF_HOSTING.md  docker-compose.yml
docs/: CURRENT_STATE.md  DELIVERY_ROADMAP.md  EDGE_ANALYSIS.md  FINANCIAL_INVARIANTS.md  GLOSSARY.md  PROJECT_CHARTER.md  STATUS.md  SYSTEM_ARCHITECTURE.md
formal/: AccountingLedger.cfg  AccountingLedger.tla  AuthenticatedNoSubmit.cfg  AuthenticatedNoSubmit.tla  CanaryRolloutSimulator.cfg  CanaryRolloutSimulator.tla  CapitalReservation.cfg  CapitalReservation.tla  ChainObserver.cfg  ChainObserver.tla  CompleteSetArbitrage.cfg  CompleteSetArbitrage.tla  ContinuousShadowCampaign.cfg  ContinuousShadowCampaign.tla  ControlledProductionRelease.cfg  ControlledProductionRelease.tla  CredentialBrokerSimulator.cfg  CredentialBrokerSimulator.tla  CredentialProviderCertification.cfg  CredentialProviderCertification.tla  CtfTransactionRuntime.cfg  CtfTransactionRuntime.tla  DeploymentAdapterCertification.cfg  DeploymentAdapterCertification.tla  DeploymentChangeCampaign.cfg  DeploymentChangeCampaign.tla  DeploymentChangeControl.cfg  DeploymentChangeControl.tla  DeploymentExecutionIntent.cfg  DeploymentExecutionIntent.tla  DeploymentOrchestrationSimulator.cfg  DeploymentOrchestrationSimulator.tla  DeploymentPreflight.cfg  DeploymentPreflight.tla  DurableInfrastructure.cfg  DurableInfrastructure.tla  ExecutorSessionSimulator.cfg  ExecutorSessionSimulator.tla  FeedSupervisor.cfg  FeedSupervisor.tla  (+59 more)
scripts/: analyze_calibration.py  analyze_dataset.py  analyze_maker.py  analyze_paper_edge.py  backtest_fair_value.py  backtest_intraday.py  build_dataset.py  capture_progress.py  capture_snapshots.py  hourly_engine.py  live_paper_trader.py  run-continuous-capture.sh  scan_cross_venue.py
specs/: constitution.md
terminal/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
(+391 files in other folders)
