[package]
name = "credential-broker-simulator"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
blake3.workspace = true
event-schema = { path = "../event-schema" }
market-recorder = { path = "../market-recorder" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
transport-adapter-certification = { path = "../transport-adapter-certification" }

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true

[lints]
workspace = true
