[package]
name = "ctf-transaction-runtime"
version = "0.1.0"
publish.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
accounting-ledger = { path = "../accounting-ledger" }
blake3.workspace = true
event-schema = { path = "../event-schema" }
market-recorder = { path = "../market-recorder" }
paired-settlement-runtime = { path = "../paired-settlement-runtime" }
serde.workspace = true
serde_json.workspace = true
settlement-reconciliation = { path = "../settlement-reconciliation" }
thiserror.workspace = true

[dev-dependencies]
paired-paper-execution = { path = "../paired-paper-execution" }
paired-placement-policy = { path = "../paired-placement-policy" }
proptest.workspace = true
tempfile.workspace = true

[lints]
workspace = true
