[package]
name = "deployment-adapter-certification"
version = "0.1.0"
publish.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
blake3.workspace = true
deployment-orchestration-simulator = { path = "../deployment-orchestration-simulator" }
event-schema = { path = "../event-schema" }
market-recorder = { path = "../market-recorder" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true

[lints]
workspace = true
