[package]
name = "deployment-change-control"
version = "0.1.0"
publish.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
blake3.workspace = true
deployment-adapter-certification = { path = "../deployment-adapter-certification" }
event-schema = { path = "../event-schema" }
market-recorder = { path = "../market-recorder" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true

[lints]
workspace = true
