[package]
name = "deployment-execution-intent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
blake3.workspace = true
event-schema = { path = "../event-schema" }
market-recorder = { path = "../market-recorder" }
production-change-readiness = { path = "../production-change-readiness" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true

[lints]
workspace = true
