[package]
name = "deployment-orchestration-simulator"
version = "0.1.0"
publish.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
blake3.workspace = true
deployment-preflight = { path = "../deployment-preflight" }
event-schema = { path = "../event-schema" }
market-recorder = { path = "../market-recorder" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
fleet-rollout-governance = { path = "../fleet-rollout-governance" }
proptest.workspace = true
tempfile.workspace = true

[lints]
workspace = true
