[package]
name = "deployment-preflight"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
blake3.workspace = true
event-schema = { path = "../event-schema" }
fleet-rollout-governance = { path = "../fleet-rollout-governance" }
market-recorder = { path = "../market-recorder" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
canary-rollout-simulator = { path = "../canary-rollout-simulator" }
proptest.workspace = true
tempfile.workspace = true

[lints]
workspace = true
