[package]
name = "executor-session-simulator"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
blake3.workspace = true
deployment-execution-intent = { path = "../deployment-execution-intent" }
event-schema = { path = "../event-schema" }
market-recorder = { path = "../market-recorder" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
production-change-readiness = { path = "../production-change-readiness" }
tempfile.workspace = true

[lints]
workspace = true
