[package]
name = "feed-supervisor"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
blake3.workspace = true
live-market-state = { path = "../live-market-state" }
reference-market-data = { path = "../reference-market-data" }
thiserror.workspace = true

[lints]
workspace = true
