[package]
name = "integration-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
blake3.workspace = true
common-types = { path = "../common-types" }
feed-supervisor = { path = "../feed-supervisor" }
live-market-state = { path = "../live-market-state" }
market-recorder = { path = "../market-recorder" }
market-session = { path = "../market-session" }
order-book-replay = { path = "../order-book-replay" }
public-market-data = { path = "../public-market-data" }
reference-market-data = { path = "../reference-market-data" }
session-runtime = { path = "../session-runtime" }
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
