[package]
name = "live-market-state"
version = "0.1.0"
publish.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
event-schema = { path = "../event-schema" }
market-recorder = { path = "../market-recorder" }
order-book-replay = { path = "../order-book-replay" }
public-market-data = { path = "../public-market-data" }
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true

[lints]
workspace = true
