[package]
name = "market-session"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
blake3.workspace = true
common-types = { path = "../common-types" }
feed-supervisor = { path = "../feed-supervisor" }
live-market-state = { path = "../live-market-state" }
order-book-replay = { path = "../order-book-replay" }
public-market-data = { path = "../public-market-data" }
reference-market-data = { path = "../reference-market-data" }
resolution-rules = { path = "../resolution-rules" }
thiserror.workspace = true

[lints]
workspace = true
