[package]
name = "order-book-replay"
version = "0.1.0"
publish.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
blake3.workspace = true
common-types = { path = "../common-types" }
event-schema = { path = "../event-schema" }
market-recorder = { path = "../market-recorder" }
public-market-data = { path = "../public-market-data" }
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true

[lints]
workspace = true
