[package]
name = "order-book-replay"
version = "0.1.0"
publish.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
blake3.workspace = true
common-types = { path = "../common-types" }
event-schema = { path = "../event-schema" }
market-recorder = { path = "../market-recorder" }
public-market-data = { path = "../public-market-data" }
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
