[package]
name = "order-intent-policy"
version = "0.1.0"
publish.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
accounting-ledger = { path = "../accounting-ledger" }
blake3.workspace = true
event-schema = { path = "../event-schema" }
market-recorder = { path = "../market-recorder" }
portfolio-risk = { path = "../portfolio-risk" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
settlement-reconciliation = { path = "../settlement-reconciliation" }
tempfile.workspace = true

[lints]
workspace = true
