[package]
name = "paired-capital-staging"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
accounting-ledger = { path = "../accounting-ledger" }
blake3.workspace = true
event-schema = { path = "../event-schema" }
market-recorder = { path = "../market-recorder" }
paired-opportunity-runtime = { path = "../paired-opportunity-runtime" }
portfolio-risk = { path = "../portfolio-risk" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
common-types = { path = "../common-types" }
complete-set-arbitrage = { path = "../complete-set-arbitrage" }
feed-supervisor = { path = "../feed-supervisor" }
live-market-state = { path = "../live-market-state" }
market-session = { path = "../market-session" }
proptest.workspace = true
public-market-data = { path = "../public-market-data" }
reference-market-data = { path = "../reference-market-data" }
settlement-reconciliation = { path = "../settlement-reconciliation" }
strategy-proposal = { path = "../strategy-proposal" }
tempfile.workspace = true

[lints]
workspace = true
