[package]
name = "paired-opportunity-runtime"
version = "0.1.0"
publish.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
accounting-ledger = { path = "../accounting-ledger" }
blake3.workspace = true
complete-set-arbitrage = { path = "../complete-set-arbitrage" }
event-schema = { path = "../event-schema" }
market-recorder = { path = "../market-recorder" }
portfolio-risk = { path = "../portfolio-risk" }
serde.workspace = true
serde_json.workspace = true
settlement-reconciliation = { path = "../settlement-reconciliation" }
strategy-proposal = { path = "../strategy-proposal" }
thiserror.workspace = true

[dev-dependencies]
common-types = { path = "../common-types" }
feed-supervisor = { path = "../feed-supervisor" }
live-market-state = { path = "../live-market-state" }
market-session = { path = "../market-session" }
proptest.workspace = true
public-market-data = { path = "../public-market-data" }
reference-market-data = { path = "../reference-market-data" }
tempfile.workspace = true

[lints]
workspace = true
