[package]
name = "portfolio-risk"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
accounting-ledger = { path = "../accounting-ledger" }
blake3.workspace = true
event-schema = { path = "../event-schema" }
market-recorder = { path = "../market-recorder" }
serde.workspace = true
serde_json.workspace = true
settlement-reconciliation = { path = "../settlement-reconciliation" }
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true

[lints]
workspace = true
